# crabbit

./: .gitignore  .pliron-stair-patches.bundle  Cargo.toml  README.md  rust-toolchain.toml
crates/backend-tests/: Cargo.toml
crates/backend-tests/fixtures/backend-smoke/: Cargo.toml  README.md  compile-with-backend.sh
crates/backend-tests/fixtures/backend-smoke/src/: lib.rs  main.rs
crates/backend-tests/fixtures/hello-world-aarch64/: Cargo.toml  compile-with-backend.sh
crates/backend-tests/fixtures/itoa-aarch64/: Cargo.toml  rustc-ice-2026-06-29T10_58_34-43869.txt
crates/backend-tests/fixtures/itoa-aarch64/src/: main.rs
crates/backend-tests/fixtures/llama-rms-norm/: Cargo.toml  README.md  compile-with-backend.sh  rustc-ice-2026-05-16T22_19_17-56013.txt  rustc-ice-2026-05-17T17_45_18-64417.txt
crates/backend-tests/fixtures/llama-rms-norm/src/: main.rs
crates/backend-tests/fixtures/oc-course/: Cargo.toml
crates/backend-tests/fixtures/oc-course/src/: main.rs
crates/backend-tests/fixtures/pure-rust-aarch64/: Cargo.toml  compile-with-backend.sh
crates/backend-tests/fixtures/pure-rust-aarch64/src/: main.rs
crates/backend-tests/fixtures/stdin-aarch64/: Cargo.toml  rustc-ice-2026-07-16T21_40_29-67892.txt
crates/backend-tests/fixtures/stdin-aarch64/src/: main.rs
crates/backend-tests/fixtures/structs-aarch64/: Cargo.toml  compile-with-backend.sh
crates/backend-tests/fixtures/structs-aarch64/src/: main.rs
crates/backend-tests/fixtures/sudoku-aarch64/: Cargo.toml  compile-with-backend.sh
crates/backend-tests/fixtures/sudoku-aarch64/src/: main.rs
crates/backend-tests/fixtures/sudoku-solver/: Cargo.toml  rustc-ice-2026-07-16T08_28_45-43600.txt  rustc-ice-2026-07-16T21_40_29-67898.txt  rustc-ice-2026-07-16T21_41_20-68064.txt  rustc-ice-2026-07-16T21_41_41-68086.txt  rustc-ice-2026-07-16T21_42_00-68105.txt  rustc-ice-2026-07-16T21_43_26-68161.txt  rustc-ice-2026-07-16T21_45_45-68267.txt  rustc-ice-2026-07-16T21_47_30-68410.txt
crates/backend-tests/fixtures/sudoku-solver/src/: main.rs
crates/backend-tests/tests/: backend_smoke.rs  itoa_aarch64.rs  x86_64_darwin.rs
crates/crabbit/: Cargo.toml
crates/crabbit/src/: importer.rs  lib.rs  trace.rs
crates/inspect-driver/: Cargo.toml
crates/inspect-driver/src/: main.rs
crates/llvm-compat/: Cargo.toml
crates/llvm-compat/src/: lib.rs  ll.rs  op_interfaces.rs
crates/llvm-compat/src/conversion/: conversion_pattern.rs  conversion_target.rs  dialect_conversion.rs  mod.rs  pass.rs  pass_manager.rs  rewriter.rs  type_converter.rs
crates/llvm-compat/src/llvm/: attributes.rs  mod.rs  op_interfaces.rs  ops.rs  types.rs
crates/llvm-compat/src/passes/: dominance_frontier.rs  hot_path.rs  lower_llvm_block_args_to_phi.rs  lower_llvm_phi_to_block_args.rs  mod.rs  verify.rs
crates/llvm-compat/src/passes/llvm/: inline.rs  mem2reg.rs  mod.rs  simplify.rs  simplify_cfg.rs  sroa.rs
crates/mir/: Cargo.toml
crates/mir/src/: lib.rs
crates/mir/src/mir/: attributes.rs  mod.rs  ops.rs  types.rs
crates/mir/src/passes/: convert_mir_to_llvm.rs  mod.rs
crates/pliron-ll/: Cargo.toml
crates/pliron-ll/src/: lib.rs
crates/pliron-ll/src/aarch64/: attributes.rs  encoding.rs  mod.rs  op_interfaces.rs  ops.rs  registers.rs
crates/pliron-ll/src/conversion/: pass.rs
crates/pliron-ll/src/ll/: attributes.rs  mod.rs  op_interfaces.rs  ops.rs
crates/pliron-ll/src/macho/: mod.rs  ops.rs
crates/pliron-ll/src/passes/: dominance_frontier.rs  hot_path.rs  mod.rs  verify.rs
crates/pliron-ll/src/passes/aarch64_darwin/: aarch64_asm_lower.rs  aarch64_block_placement.rs  aarch64_branch_relax.rs  aarch64_encode.rs  aarch64_frame_lower.rs  aarch64_legalize.rs  aarch64_machine_cfg_cleanup.rs  aarch64_macho_lower.rs  aarch64_post_ra_opts.rs  aarch64_register_allocate.rs  aarch64_target_opts_pre_ra.rs  attrs.rs  error.rs  frontend.rs  isel_control_flow.rs  isel_i128.rs  isel_memory_abi.rs  llvm_aarch64_darwin_abi.rs  llvm_to_aarch64_isel.rs  macho.rs  mod.rs  util.rs  verify_llvm_for_aarch64_darwin.rs
crates/pliron-ll/src/passes/llvm/: inline.rs  mod.rs  pin_type_punned_slots.rs  simplify.rs  simplify_cfg.rs  sroa.rs
crates/pliron-ll/src/passes/x86_64_darwin/: attrs.rs  error.rs  frontend.rs  isel_control_flow.rs  isel_i128.rs  isel_memory_abi.rs  llvm_to_x86_64_isel.rs  llvm_x86_64_darwin_abi.rs  macho.rs  mod.rs  util.rs  verify_llvm_for_x86_64_darwin.rs  x86_64_asm_lower.rs  x86_64_block_placement.rs  x86_64_branch_relax.rs  x86_64_encode.rs  x86_64_frame_lower.rs  x86_64_legalize.rs  x86_64_machine_cfg_cleanup.rs  x86_64_macho_lower.rs  x86_64_post_ra_opts.rs  x86_64_register_allocate.rs  x86_64_target_opts_pre_ra.rs
crates/pliron-ll/src/x86_64/: attributes.rs  encoding.rs  mod.rs  op_interfaces.rs  ops.rs  registers.rs
crates/pliron-ll/tests/: x86_64_darwin_execution.rs
