[package]
name = "crabbit"
description = "rustc codegen backend emitting native code through pliron"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["dylib"]

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
pliron.workspace = true
crabbit-mir.workspace = true
llvm-compat.workspace = true
pliron-ll.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
combine.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
log.workspace = true
awint.workspace = true

[dev-dependencies]
expect-test.workspace = true
tempfile.workspace = true
