[package]
name = "crabbit-inspect-driver"
description = "pliron-inspect driver for the crabbit dialects and passes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["pliron", "compiler", "cli", "debugging", "inspect"]
categories = ["compilers", "command-line-utilities"]

[[bin]]
name = "crabbit-inspect-driver"
path = "src/main.rs"

[dependencies]
pliron.workspace = true
pliron-llvm.workspace = true
pliron-ll.workspace = true
crabbit-mir.workspace = true
pliron-inspect-driver.workspace = true
anyhow.workspace = true
clap.workspace = true
