[package]
name = "llvm-compat"
description = "Transitional: STAIR llvm dialect + conversion framework on pliron"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["llvm", "compiler", "pliron", "dialect", "codegen"]
categories = ["compilers"]

[dependencies]
pliron.workspace = true
pliron-inspect-driver.workspace = true
awint.workspace = true
combine.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
log.workspace = true

[dev-dependencies]
expect-test.workspace = true
