[package]
name = "crabbit-mir"
description = "crabbit mir dialect + mir-to-llvm lowering on pliron"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["mir", "rustc", "compiler", "pliron", "codegen"]
categories = ["compilers"]

[dependencies]
pliron.workspace = true
pliron-llvm.workspace = true
pliron-inspect-driver.workspace = true
pliron-ll.workspace = true
combine.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
awint.workspace = true
log.workspace = true

[dev-dependencies]
expect-test.workspace = true
