[package]
name = "oc-course"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "oc-course"
path = "src/main.rs"

# Keep this fixture out of the parent workspace. It is compiled explicitly by
# the stair-rust backend smoke test/script with RUSTFLAGS pointing at the
# backend dylib.
[workspace]
